--- a/server/views/404.handlebars
+++ b/server/views/404.handlebars
@@ -1,4 +1,4 @@
-<div class="wrapper">
+<div id="wrapper">
   <h1 class = "contentHeader">Welcome to the void.</h1>
   <a href="/">
     <div class="contentContainer">
