--- a/server/views/blog.handlebars
+++ b/server/views/blog.handlebars
@@ -1,4 +1,4 @@
-<div class="wrapper">
+<div id="wrapper">
   <div id="contentMainContainer">
     <h1 class="contentHeader">Blog</h1>
       {{#each posts}}  
