--- a/server/views/portfolio.html
+++ b/server/views/portfolio.html
@@ -25,7 +25,7 @@
           <li><a href="/resume" class="navbarOption" target="_blank">RESUME</a></li> 
         </ul>
       </nav>
-    </header>    {<div class="wrapper">
+    </header>    {<div id="wrapper">
   <div id="contentMainContainer">
     <h1 class="contentHeader">Portfolio</h1>
   </div>
