--- a/server/views/404.html
+++ b/server/views/404.html
@@ -25,7 +25,7 @@
           <li><a href="/resume" class="navbarOption" target="_blank">RESUME</a></li> 
         </ul>
       </nav>
-    </header>    {<div class="wrapper">
+    </header>    {<div id="wrapper">
   <h1 class = "contentHeader">Welcome to the void.</h1>
   <a href="/">
     <div class="contentContainer">
