--- a/server/views/500.html
+++ b/server/views/500.html
@@ -25,7 +25,7 @@
           <li><a href="/resume" class="navbarOption" target="_blank">RESUME</a></li> 
         </ul>
       </nav>
-    </header>    {<div class="wrapper">
+    </header>    {<div id="wrapper">
   <h1 class = "contentHeader">500 - Server Error</h1>
 </div>}
     <footer class="main-footer">
