--- a/server/views/home.html
+++ b/server/views/home.html
@@ -25,7 +25,7 @@
           <li><a href="/resume" class="navbarOption" target="_blank">RESUME</a></li> 
         </ul>
       </nav>
-    </header>    {<div class="wrapper">
+    </header>    {<div id="wrapper">
   <section>
     <ul id="options">
       <div class="primary_content">
