--- a/server/views/portfolio.handlebars
+++ b/server/views/portfolio.handlebars
@@ -1,4 +1,4 @@
-<div class="wrapper">
+<div id="wrapper">
   <div id="contentMainContainer">
     <h1 class="contentHeader">Portfolio</h1>
       {{#each projects}}  
