--- a/server/views/singleBlog.handlebars
+++ b/server/views/singleBlog.handlebars
@@ -1,4 +1,4 @@
-<div class="wrapper">
+<div id="wrapper">
     <div id="contentMainContainer">
       <h1 class="contentHeader">{{title}}</h1>
       <div class="singleContentContainer">
