--- a/server/views/toyProblems.handlebars
+++ b/server/views/toyProblems.handlebars
@@ -1,4 +1,4 @@
-<div class="wrapper">
+<div id="wrapper">
   <div id="contentMainContainer">
     <h1 class="contentHeader">Toy Problems</h1>
       {{#each toy_problems}}  
