--- a/public/style/main.css
+++ b/public/style/main.css
@@ -8,6 +8,7 @@ body {
   font-family: 'Open Sans', sans-serif;
   background-color: #050505;
   color: #1B9AAA;
+  max-width: 100%
 }
 
 #wrapper {
@@ -127,6 +128,17 @@ nav a.selected, nav a:hover {
   color: #694c85;
 }
 
+#menu-icon {
+  display: none;
+  width: 40px;
+  height: 40px;
+  background: #F5F1E3 url(../img/menu-icon.png) center;
+}
+
+a:hover#menu-icon {
+  background-color: #444;
+  border-radius: 4px 4px 0 0;
+}
 /**********************************
 FOOTER
 ***********************************/
@@ -312,7 +324,7 @@ RESPONSIVE DESIGN
   font-size: 2.25em;
   text-align: center;
 }*/
-@media (max-width: 1021px) {
+@media screen and (max-width: 1021px) {
   
   #headerName {
     font-size: 1.5em;
@@ -326,7 +338,7 @@ RESPONSIVE DESIGN
   }
 }
 
-@media (max-width: 873px) {
+@media screen and (max-width: 873px) {
   
   #logo {
     width: 32%;
@@ -342,7 +354,7 @@ RESPONSIVE DESIGN
   }
 }
 
-@media (max-width: 748px) {
+@media screen and (max-width: 748px) {
   #logo {
     text-align: center;
     width: 100%;
@@ -353,12 +365,12 @@ RESPONSIVE DESIGN
     text-align: center;
     width: 100%;
     background: linear-gradient( 0deg, #050505, #1B9AAA ); 
- 
   }
   nav a {
     font-weight: 400;
     color: #F5F1E3;
     font-family: 'Quicksand', 'Open Sans', sans-serif;
+    padding: .25em;
   }
   header {
     border-bottom: none;
@@ -366,7 +378,74 @@ RESPONSIVE DESIGN
     margin: 0 0 1em 0;
   }
 }
+/*
+ORIGINAL
+#wrapper {
+  max-width: 80%;
+  margin: 0 auto;
+  padding: 6% 5%;
+}
+ORIGINAL
+header {
+  float: left;
+  width: 100%;
+  border-bottom: 2px solid #1B9AAA;
+  padding: 1.5em 0 1.5em 0;
+  background: #F5F1E3;
+  margin: 0 0 1em 0;
+}*/
+/*MEDIA QUERY*/
+@media only screen and (max-width : 640px) {
 
+  header {
+
+    position: absolute;
+
+  }
+
+  #menu-icon {
+
+    display:inline-block;
+
+  }
+
+  nav ul, nav:active ul { 
+
+    display: none;
+    position: absolute;
+    padding: 20px;
+    background: #fff;
+    border: 5px solid #444;
+    right: 20px;
+    top: 60px;
+    width: 50%;
+    border-radius: 4px 0 4px 4px;
+
+  }
+
+  nav li {
+
+    text-align: center;
+    width: 100%;
+    padding: 10px 0;
+    margin: 0;
+
+  }
+
+  nav:hover ul {
+
+    display: block;
+
+  }
+@media screen and (max-width: 430px) {
+  #wrapper {
+    width: 100%;
+    padding: 0;
+  }
+  /*nav a {
+    font-size: .6em;
+  }*/
+}
 
 
 
