--- a/server/views/partials/head.handlebars
+++ b/server/views/partials/head.handlebars
@@ -1,7 +1,9 @@
+<title>Richard Boothe | Developer</title>
 <link rel="icon" href="/img/favicon.png" sizes="16x16" >
 <link rel="stylesheet" href="/style/normalize.min.css" />
-{{!-- <link href='//fonts.googleapis.com/css?family=Changa+One|Open+Sans:400italic,700italic,400,700,800' rel='stylesheet' type='text/css'> --}}
 <link rel="stylesheet" href="/style/main.min.css" />
+<meta name="description" content="Richard Boothe's Personal Site">
+<meta name="author" content="Richard Boothe">
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <script src="https://code.jquery.com/jquery-2.2.0.min.js"></script> 
