--- a/server/views/partials/nav.handlebars
+++ b/server/views/partials/nav.handlebars
@@ -6,6 +6,7 @@
     </a>
   </div>
   <nav>
+    <a href='#' id="menu-icon"></a>
     <ul>
       <li><a href="/toy-problems" class="navbarOption">TOY PROBLEMS</a></li>
       <li><a href="/blog" class="navbarOption">BLOG</a></li>
