--- a/server/views/toyProblems.html
+++ b/server/views/toyProblems.html
@@ -2,13 +2,15 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <title>Richard Boothe | Developer</title>
     <link rel="icon" href="/img/favicon.png" sizes="16x16" >
     <link rel="stylesheet" href="/style/normalize.min.css" />
     <link rel="stylesheet" href="/style/main.min.css" />
+    <meta name="description" content="Richard Boothe's Personal Site">
+    <meta name="author" content="Richard Boothe">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://code.jquery.com/jquery-2.2.0.min.js"></script>     <title>Richard Boothe | Developer</title>
-  </head>
+    <script src="https://code.jquery.com/jquery-2.2.0.min.js"></script>   </head>
   <body> 
     <header>
       <div id="logo">
@@ -18,6 +20,7 @@
         </a>
       </div>
       <nav>
+        <a href='#' id="menu-icon"></a>
         <ul>
           <li><a href="/toy-problems" class="navbarOption">TOY PROBLEMS</a></li>
           <li><a href="/blog" class="navbarOption">BLOG</a></li>
