--- a/server/views/resume.handlebars
+++ b/server/views/resume.handlebars
@@ -1,5 +1,5 @@
 
-  <embed width="100%" height="900px" src="https://richardboothe.herokuapp.com/pdf/resume.pdf" type="application/pdf">
+  <embed width="100%" height="900px" src="/pdf/Resume.pdf" type="application/pdf">
 
 
 
