--- a/server/views/500.html
+++ b/server/views/500.html
@@ -1,4 +1,4 @@
-<!-- Hi! Thanks for checking out my site, if you have questions about something you can contact me at richardjboothe@me.com. -->
+<!-- Hi there curious web surfer! Thank you for checking out my site, if you have questions about something related to the structure of this site you can contact me at richardjboothe@me.com. In addition, you can find some of the code related to this site at https://github.com/richardjboothe/InterloperSite -->
 <!DOCTYPE html>
 <html lang="en">
   <head>
