modify projects style

--- a/server/views/portfolio.handlebars
+++ b/server/views/portfolio.handlebars
@@ -12,7 +12,7 @@
                 </a>
               </span>
               <div class="contentInnerContainer">
-                <span class="contentDescription"> 
+                {{!-- <span class="contentDescription">  --}}
                   <p>{{{description}}}</p>
                 </span>
               </div>
