--- a/public/style/main.css
+++ b/public/style/main.css
@@ -407,6 +407,8 @@ RESPONSIVE DESIGN
     width: 100%;
     text-align: center;
     display: inline-block;
+    float:none;
+    margin: 1em 1em 0 0;
   }
 
 
