--- a/public/style/main.css
+++ b/public/style/main.css
@@ -408,7 +408,8 @@ RESPONSIVE DESIGN
     text-align: center;
     display: inline-block;
     float: none;
-    margin: 1em 1em 0 0;
+    margin-bottom: 0;
+    margin-left: 0;
   }
 
 }
