--- a/server/views/blog.html
+++ b/server/views/blog.html
@@ -5,7 +5,7 @@
     <title>Richard Boothe | Developer</title>
     <link rel="icon" href="/img/favicon.png" sizes="16x16" >
     <link rel="stylesheet" href="/style/normalize.min.css" />
-    <link rel="stylesheet" href="/style/main.min.css" />
+    <link rel="stylesheet" href="/style/main.css" />
     <meta name="description" content="Richard Boothe's Personal Site">
     <meta name="author" content="Richard Boothe">
     <meta charset="UTF-8">
@@ -41,5 +41,6 @@
       <p class="copywrite">&copy; 2016 Richard Boothe</p>
     </footer>
     
+    <script type="text/javascript" src="src/app.js"></script>
   </body>
 </html>
