--- a/server/views/home.handlebars
+++ b/server/views/home.handlebars
@@ -3,20 +3,35 @@
     <ul id="options">
         <li>
           <a href="/toy-problems">
-            <p class="image-title">Toy Problems</p>
-            <img class="home_image" src="/img/toyProblems.jpg" alt="toy problems" />
+            <p class="image_title">Toy Problems</p>
+            <div class="foto_frame">
+              <div class="foto_text hide">
+                Test1
+              </div>
+              <img class="home_image" src="/img/toyProblems.jpg" alt="toy problems" />
+            </div>
           </a>  
         </li>
         <li>
           <a href="/blog">
-            <p class="image-title">Blog</p>
-            <img class="home_image" src="/img/blog.jpg" alt="blog" />
+            <p class="image_title">Blog</p>
+            <div class="foto_frame">
+              <div class="foto_text hide">
+                Test2
+              </div>
+              <img class="home_image" src="/img/blog.jpg" alt="blog" />
+            </div>
           </a>
         </li>  
         <li>
           <a href="/portfolio">
-            <p class="image-title">Portfolio</p>
-            <img class="home_image" src="/img/portfolio.jpg" alt="portfolio" />
+            <p class="image_title">Portfolio</p>
+            <div class="foto_frame">
+              <div class="foto_text hide">
+                Test3
+              </div>
+              <img class="home_image" src="/img/portfolio.jpg" alt="portfolio" />
+            </div>
           </a>  
         </li>
     </ul>
