--- a/server/views/home.html
+++ b/server/views/home.html
@@ -5,7 +5,7 @@
     <title>Richard Boothe | Developer</title>
     <link rel="icon" href="/img/favicon.png" sizes="16x16" >
     <link rel="stylesheet" href="/style/normalize.min.css" />
-    <link rel="stylesheet" href="/style/main.min.css" />
+    <link rel="stylesheet" href="/style/main.css" />
     <meta name="description" content="Richard Boothe's Personal Site">
     <meta name="author" content="Richard Boothe">
     <meta charset="UTF-8">
@@ -32,20 +32,35 @@
     <ul id="options">
         <li>
           <a href="/toy-problems">
-            <p class="image-title">Toy Problems</p>
-            <img class="home_image" src="/img/toyProblems.jpg" alt="toy problems" />
+            <p class="image_title">Toy Problems</p>
+            <div class="foto_frame">
+              <div class="foto_text hide">
+                Test1
+              </div>
+              <img class="home_image" src="/img/toyProblems.jpg" alt="toy problems" />
+            </div>
           </a>  
         </li>
         <li>
           <a href="/blog">
-            <p class="image-title">Blog</p>
-            <img class="home_image" src="/img/blog.jpg" alt="blog" />
+            <p class="image_title">Blog</p>
+            <div class="foto_frame">
+              <div class="foto_text hide">
+                Test2
+              </div>
+              <img class="home_image" src="/img/blog.jpg" alt="blog" />
+            </div>
           </a>
         </li>  
         <li>
           <a href="/portfolio">
-            <p class="image-title">Portfolio</p>
-            <img class="home_image" src="/img/portfolio.jpg" alt="portfolio" />
+            <p class="image_title">Portfolio</p>
+            <div class="foto_frame">
+              <div class="foto_text hide">
+                Test3
+              </div>
+              <img class="home_image" src="/img/portfolio.jpg" alt="portfolio" />
+            </div>
           </a>  
         </li>
     </ul>
@@ -59,5 +74,6 @@
       <p class="copywrite">&copy; 2016 Richard Boothe</p>
     </footer>
     
+    <script type="text/javascript" src="src/app.js"></script>
   </body>
 </html>
