--- a/server/views/404.html
+++ b/server/views/404.html
@@ -5,12 +5,15 @@
     <title>Richard Boothe | Developer</title>
     <link rel="icon" href="/img/favicon.png" sizes="16x16" >
     <link rel="stylesheet" href="/style/normalize.min.css" />
-    <link rel="stylesheet" href="/style/main.css" />
+    <link rel="stylesheet" href="/style/main.min.css" />
     <meta name="description" content="Richard Boothe's Personal Site">
     <meta name="author" content="Richard Boothe">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://code.jquery.com/jquery-2.2.0.min.js"></script>   </head>
+    <script src="https://code.jquery.com/jquery-2.2.0.min.js"></script> 
+    
+    
+  </head>
   <body> 
     <header>
       <div id="logo">
@@ -51,3 +54,6 @@
     <script type="text/javascript" src="src/app.js"></script>
   </body>
 </html>
+
+
+
