--- a/server/views/partials/head.handlebars
+++ b/server/views/partials/head.handlebars
@@ -1,7 +1,7 @@
 <title>Richard Boothe | Developer</title>
 <link rel="icon" href="/img/favicon.png" sizes="16x16" >
 <link rel="stylesheet" href="/style/normalize.min.css" />
-<link rel="stylesheet" href="/style/main.css" />
+<link rel="stylesheet" href="/style/main.min.css" />
 <meta name="description" content="Richard Boothe's Personal Site">
 <meta name="author" content="Richard Boothe">
 <meta charset="UTF-8">
