--- a/server/views/home.html
+++ b/server/views/home.html
@@ -5,12 +5,15 @@
     <title>Richard Boothe | Developer</title>
     <link rel="icon" href="/img/favicon.png" sizes="16x16" >
     <link rel="stylesheet" href="/style/normalize.min.css" />
-    <link rel="stylesheet" href="/style/main.css" />
+    <link rel="stylesheet" href="/style/main.min.css" />
     <meta name="description" content="Richard Boothe's Personal Site">
     <meta name="author" content="Richard Boothe">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://code.jquery.com/jquery-2.2.0.min.js"></script>   </head>
+    <script src="https://code.jquery.com/jquery-2.2.0.min.js"></script> 
+    
+    
+  </head>
   <body> 
     <header>
       <div id="logo">
@@ -31,33 +34,33 @@
   <section>
     <ul id="options">
         <li>
-          <a href="/toy-problems">
+          <a class='home_image_wrapper' href="/toy-problems">
             <p class="image_title">Toy Problems</p>
             <div class="foto_frame">
               <div class="foto_text hide">
-                Test1
+                <p>Here you can check out my approach to solving toy problems ranging from the most basic to company challenges!</p>
               </div>
               <img class="home_image" src="/img/toyProblems.jpg" alt="toy problems" />
             </div>
           </a>  
         </li>
         <li>
-          <a href="/blog">
+          <a class='home_image_wrapper' href="/blog">
             <p class="image_title">Blog</p>
             <div class="foto_frame">
               <div class="foto_text hide">
-                Test2
+                <p>Here you can find some thoughts I have about programming, web development, life as a developer and more!</p>
               </div>
               <img class="home_image" src="/img/blog.jpg" alt="blog" />
             </div>
           </a>
         </li>  
         <li>
-          <a href="/portfolio">
+          <a class='home_image_wrapper' href="/portfolio">
             <p class="image_title">Portfolio</p>
             <div class="foto_frame">
               <div class="foto_text hide">
-                Test3
+                <p>Here you can find a few of the projects I've worked on with descriptions of the tech used on each!</p>
               </div>
               <img class="home_image" src="/img/portfolio.jpg" alt="portfolio" />
             </div>
@@ -65,7 +68,10 @@
         </li>
     </ul>
   </section>
-</div>}
+</div>
+
+
+}
     <footer class="main-footer">
       <a href="http://www.github.com/richardjboothe" target="_blank"><img src="/img/github.png" alt="Github Logo" class="social-icon" ></a>
       <a href="http://www.twitter.com/richardjboothe" target="_blank"><img src="/img/twitter.png" alt="Twitter Logo" class="social-icon" ></a>
@@ -77,3 +83,6 @@
     <script type="text/javascript" src="src/app.js"></script>
   </body>
 </html>
+
+
+
