--- a/server/views/about.html
+++ b/server/views/about.html
@@ -31,25 +31,18 @@
           <li><a href="/about" class="navbarOption">ABOUT</a></li> 
         </ul>
       </nav>
-    </header>    {<div id="wrapper">
-    <div id="contentMainContainer">
-      <h1 class="contentHeader"></h1>
-      <div class="singleContentContainer">
-        <div class="toy_problem_Photo_large">
-          <img alt=" photo" src="/img/" height="96" width="96"/> 
-        </div>
-        <div class="toy_problem_title_description">
-          <p></p>
-        </div>
-        <div class="toy_problem_Container">
-          <div class="toy_problem_InnerContainer">
-            <p class="toy_problem_Description"></p>
-          </div>
-        </div>
+    </header>    {
+      <div id="wrapper">
+        <section>
+          <img src="/img/profile.jpeg" alt="Photograph of Richard Boothe" class="profile-photo">
+          <h3>About</h3>
+          <p>Hi, I'm Richard Boothe! This is my design portfolio where I share all of my favroite work. When I'm not designing things, I enjoy exercising, playing video games, drinking good coffee, and more.</p>
+          <p>If you'd like to follow me on Twitter, my username is <a href="http://twitter.com/richardjboothe">@richardjboothe</a>.</p>
+        </section>
       </div>
-    </div>
-</div>
-  }
+
+
+}
     <footer class="main-footer">
       <a href="http://www.github.com/richardjboothe" target="_blank"><img src="/img/github.png" alt="Github Logo" class="social-icon" ></a>
       <a href="http://www.twitter.com/richardjboothe" target="_blank"><img src="/img/twitter.png" alt="Twitter Logo" class="social-icon" ></a>
