--- a/server/views/partials/head.handlebars
+++ b/server/views/partials/head.handlebars
@@ -7,5 +7,6 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <script src="https://code.jquery.com/jquery-2.2.0.min.js"></script> 
+<script type="text/javascript" src="/src/app.js"></script>
 
 
