--- a/server/views/singleBlog.html
+++ b/server/views/singleBlog.html
@@ -11,6 +11,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://code.jquery.com/jquery-2.2.0.min.js"></script> 
+    <script type="text/javascript" src="/src/app.js"></script>
     
     
   </head>
@@ -27,7 +28,7 @@
           <li><a href="/toy-problems" class="navbarOption">TOY PROBLEMS</a></li>
           <li><a href="/blog" class="navbarOption">BLOG</a></li>
           <li><a href="/portfolio" class="navbarOption">PORTFOLIO</a></li>
-          <li><a href="/resume" class="navbarOption" target="_blank">RESUME</a></li> 
+          <li><a href="/about" class="navbarOption">ABOUT</a></li> 
         </ul>
       </nav>
     </header>    {<div id="wrapper">
@@ -57,7 +58,6 @@
       <p class="copywrite">&copy; 2016 Richard Boothe</p>
     </footer>
     
-    <script type="text/javascript" src="src/app.js"></script>
   </body>
 </html>
 
