add container div to about

--- a/server/views/about.handlebars
+++ b/server/views/about.handlebars
@@ -1,11 +1,11 @@
 
       <div id="wrapper">
-        <section>
-          <img src="/img/profile.jpeg" alt="Photograph of Richard Boothe" class="profile-photo">
-          <h3>About</h3>
+        <img src="/img/profile.jpeg" alt="Photograph of Richard Boothe" class="profile-photo">
+        <div class='contentContainer'>
+          <h2>About</h2>
           <p>Hi, I'm Richard Boothe! This is my design portfolio where I share all of my favroite work. When I'm not designing things, I enjoy exercising, playing video games, drinking good coffee, and more.</p>
           <p>If you'd like to follow me on Twitter, my username is <a href="http://twitter.com/richardjboothe">@richardjboothe</a>.</p>
-        </section>
+        </div>
       </div>
 
 
