update about page

--- a/server/views/about.html
+++ b/server/views/about.html
@@ -34,10 +34,14 @@
     </header>    {
       <div id="wrapper">
         <img src="/img/profile.jpeg" alt="Photograph of Richard Boothe" class="profile-photo">
+        <h1 class="contentHeader">About</h1>
         <div class='contentContainer'>
-          <h2>About</h2>
-          <p>Hi, I'm Richard Boothe! This is my design portfolio where I share all of my favroite work. When I'm not designing things, I enjoy exercising, playing video games, drinking good coffee, and more.</p>
-          <p>If you'd like to follow me on Twitter, my username is <a href="http://twitter.com/richardjboothe">@richardjboothe</a>.</p>
+          <div class="contentInnerContainer">
+            <p>Hello, thank you for taking time to check out my site. I decided to build this so I could display all of my work as well as my studies in a more tangible environment than a github profile page. Over the last few years my continually growing understanding of JavaScript has further influenced my desire to learn more and in turn spread that knowledge to any who'd like to learn as well. As this page evolves I will continue to update it with more and more work that I have experimented with, as well as some programming paradigms outside of the realm of JavaScript.</p>
+            <p>When I'm not punching keys developing I'm happiest exploring the outdoors, playing guitar, going to meetups in the Austin area, and discovering great dives for great beer and better conversation.</p>
+            <p>If you'd like to follow me on Twitter, my username is <a href="http://twitter.com/richardjboothe">@richardjboothe</a>.
+            </p>
+          </div>
         </div>
       </div>
 
