--- a/server/views/about.handlebars
+++ b/server/views/about.handlebars
@@ -1,6 +1,6 @@
 
       <div id="wrapper">
-        <img src="/img/profile.jpeg" alt="Photograph of Richard Boothe" class="profile-photo">
+        <img src="/img/profile.jpeg" alt="Photograph of Richard Boothe" class="profile_photo">
         <h1 class="contentHeader">About</h1>
         <div class='contentContainer'>
           <div class="contentInnerContainer">
@@ -10,6 +10,7 @@
             </p>
           </div>
         </div>
+        <h2 class='resume_link'><a href='/about/resume' target='_blank'>Resume</a></h2>
       </div>
 
 
