--- a/server/views/about.html
+++ b/server/views/about.html
@@ -33,7 +33,7 @@
       </nav>
     </header>    {
       <div id="wrapper">
-        <img src="/img/profile.jpeg" alt="Photograph of Richard Boothe" class="profile-photo">
+        <img src="/img/profile.jpeg" alt="Photograph of Richard Boothe" class="profile_photo">
         <h1 class="contentHeader">About</h1>
         <div class='contentContainer'>
           <div class="contentInnerContainer">
@@ -43,6 +43,7 @@
             </p>
           </div>
         </div>
+        <h2 class='resume_link'><a href='/about/resume' target='_blank'>Resume</a></h2>
       </div>
 
 
