--- a/server/views/singleBlog.handlebars
+++ b/server/views/singleBlog.handlebars
@@ -1,6 +1,6 @@
 <div id="wrapper">
     <div id="contentMainContainer">
-      <h1 class="contentHeader">{{title}}</h1>
+      <h1 class="blog_header">{{title}}</h1>
       <div class="singleContentContainer">
         <div class="post_Photo_large">
           <img alt="{{title}} photo" src="/img/{{image}}" height="96" width="96"/> 
