--- a/server/views/singleBlog.html
+++ b/server/views/singleBlog.html
@@ -33,7 +33,7 @@
       </nav>
     </header>    {<div id="wrapper">
     <div id="contentMainContainer">
-      <h1 class="contentHeader"></h1>
+      <h1 class="blog_header"></h1>
       <div class="singleContentContainer">
         <div class="post_Photo_large">
           <img alt=" photo" src="/img/" height="96" width="96"/> 
