improve error handling

--- a/server/views/404.handlebars
+++ b/server/views/404.handlebars
@@ -1,13 +1,11 @@
 <div id="wrapper">
   <h1 class = "contentHeader">Welcome to the void.</h1>
-  <a href="/">
     <div class="contentContainer">
-      <div class="contentPhoto">
-        <img alt="404 photo" src="/img/404.png" height="96" width="96"/> 
-      </div>
       <div class="contentInnerContainer">
-        <p class="404Description">Oh no! The page you're looking for doesn't exist yet! If you think it should, send me an email at by clicking here on <a href='mailto:richardjboothe@gmail.com?cc=richardjboothe@me.com&subject=Mail%20from%20richardboothe.com%20'><span style="{color:#DDDBCB}">this</span></a> </p>
+        <p class="404Description">Oh no! The page you're looking for doesn't exist yet! If you think it should, send me an email at by clicking here on <a href='mailto:richardjboothe@gmail.com?cc=richardjboothe@me.com&subject=Mail%20from%20richardboothe.com%20'><span style="{color:#DDDBCB}">this</span></a>!</p>
+      </div>
+      <div class="errorBox">
+        {{E}}
       </div>
     </div>
-  </a>
 </div>
