improve error handling

--- a/server/views/404.html
+++ b/server/views/404.html
@@ -35,10 +35,7 @@
   <h1 class = "contentHeader">Welcome to the void.</h1>
     <div class="contentContainer">
       <div class="contentInnerContainer">
-        <p class="404Description">Oh no! The page you're looking for doesn't exist yet! If you think it should, send me an email at by clicking here on <a href='mailto:richardjboothe@gmail.com?cc=richardjboothe@me.com&subject=Mail%20from%20richardboothe.com%20'><span style="{color:#DDDBCB}">this</span></a>!</p>
-      </div>
-      <div class="errorBox">
-        
+        <p class="404Description">Oh no! The page you're looking for doesn't exist yet! If you think it should, send me an email by clicking here on <a href='mailto:richardjboothe@gmail.com?cc=richardjboothe@me.com&subject=Mail%20from%20richardboothe.com%20'><span style="{color:#DDDBCB}">this</span></a>!</p>
       </div>
     </div>
 </div>}
