--- a/server/views/500.html
+++ b/server/views/500.html
@@ -33,6 +33,9 @@
       </nav>
     </header>    {<div id="wrapper">
   <h1 class = "contentHeader">500 - Server Error</h1>
+  <div class="errorBox">
+    
+  </div>
 </div>}
     <footer class="main-footer">
       <a href="http://www.github.com/richardjboothe" target="_blank"><img src="/img/github.png" alt="Github Logo" class="social-icon" ></a>
