improve error handling

--- a/server/views/500.handlebars
+++ b/server/views/500.handlebars
@@ -1,6 +1,6 @@
 <div id="wrapper">
   <h1 class = "contentHeader">500 - Server Error</h1>
   <div class="errorBox">
-    {{E}}
+    Oh No! There was an error with the server! I've been notified and will see fix this promptly! Sorry for the inconvenience!
   </div>
 </div>
