--- a/server/views/500.html
+++ b/server/views/500.html
@@ -34,7 +34,7 @@
     </header>    {<div id="wrapper">
   <h1 class = "contentHeader">500 - Server Error</h1>
   <div class="errorBox">
-    
+    Oh No! There was an error with the server! I've been notified and will see fix this promptly! Sorry for the inconvenience!
   </div>
 </div>}
     <footer class="main-footer">
