--- a/server/views/about.handlebars
+++ b/server/views/about.handlebars
@@ -5,7 +5,8 @@
         <div class='contentContainer'>
           <div class="contentInnerContainer">
             <p>Hello, thank you for taking time to check out my site. I decided to build this so I could display all of my work as well as my studies in a more tangible environment than a github profile page. Over the last few years my continually growing understanding of JavaScript has further influenced my desire to learn more and in turn spread that knowledge to any who'd like to learn as well. As this page evolves I will continue to update it with more and more work that I have experimented with, as well as some programming paradigms outside of the realm of JavaScript.</p>
-            <p>When I'm not punching keys developing I'm happiest exploring the outdoors, playing guitar, going to meetups in the Austin area, and discovering great dives for great beer and better conversation.</p>
+        {{!--     <p>I am currently the owner and CTO of Weeknight Dangerous, a development company specializing in building websites, online stores optimized for user experience and increased owner inventory control, as well as pesonal sites. My team and I are accepting opportunities and would love to speak with you if you are looking for increased online presence. You can contact me personally at <a href='mailto:richardjboothe@gmail.com?cc=richardjboothe@me.com&subject=Mail%20from%20richardboothe.com%20'><span style="{color:#DDDBCB}">richardjboothe@gmail.com</span></a> or visit the company site at <a href='https://weeknightdangero.us'>weeknightdangero.us</a></p> 
+ --}}            <p>When I'm not punching keys developing I'm happiest exploring the outdoors, playing guitar, going to meetups in the Austin area, and discovering great dives for great beer and better conversation.</p>
             <p>If you'd like to follow me on Twitter, my username is <a href="http://twitter.com/richardjboothe">@richardjboothe</a>.
             </p>
           </div>
