fix bottom margin for contentContainer

--- a/public/style/main.css
+++ b/public/style/main.css
@@ -224,7 +224,7 @@ BLOGS/TOY PROBLEMS/PORTFOLIO LISTING CONTENT
     border: 3px solid #1B9AAA;
     border-radius: 10px;
     background-color: #F5F1E3;
-    margin: 0 auto;
+    margin: 0 auto 1.5em;
     font-size: 16px;
     color: #2C302E;
 }
